Fix UI layout of camera view area
Remove dependency on defining the horizontal and vertical external space
to size the canvas / camera view area.

The static sizes were inevitably going to cause maintenance problems,
as I had noted in the comment there, and were dependent on user agent
styles like fonts.

When I added conditionally visible UI elements, I couldn't just adjust
the static sizes, since the external width/height is no longer constant.

This commit fixes the camera view being pushed off-screen when the
checkbox to swap mouse buttons is present (that is, in the desktop app),
and makes the layout completely dynamic.

The extra wrapper div might not be needed, it's just the first way I
thought of to fix this (that doesn't involve ResizeObserver or more JS).

Fixes https://github.com/1j01/tracky-mouse/issues/9

--- a/tracky-mouse.css
+++ b/tracky-mouse.css
@@ -43,6 +43,8 @@
 	box-shadow: 0 0 10px yellow, 0 0 3px yellow;
 }
 .tracky-mouse-ui {
+	display: flex;
+	flex-direction: column;
 	background-color: rgb(195, 173, 230);
 	color: black;
 	padding: 10px;
@@ -85,15 +87,17 @@
 .tracky-mouse-ui .tracky-mouse-labeled-slider .tracky-mouse-max-label {
 	right: 0;
 }
+.tracky-mouse-canvas-container-container {
+	flex: 1;
+	flex-basis: 0;
+	min-width: 0;
+	min-height: 0;
+}
 .tracky-mouse-canvas-container {
 	position: relative;
-	/* This depends on the dimensions of the layout outside of this element.
-	TODO: please find a less finicky way to do this! This will be insane to maintain.
-	The property object-fit would be a perfect fit, but it only works for replaced elements. */
-	/* Also TODO: add min size, or better maybe, handle small window by hiding options and making webcam view big. */
-	--external-height: 230px;
-	--external-width: 20px;
-	height: min(calc(100vh - var(--external-height)), calc(min(100vw, var(--max-ui-width)) / var(--aspect-ratio) - var(--external-width)));
+	/* Note: aspect-ratio is set from JS, which determines the width implicitly. */
+	/* TODO: add min size, or better maybe, handle small window by hiding options and making webcam view big. */
+	max-height: 100%;
 	margin: auto;
 }
 .tracky-mouse-canvas-overlay {
